--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,15 @@
     height: 40px;
 }
 
-#photo, #tech {
+#tech {
     height: 200px;
+}
+
+#photo {
+    margin-top: 5%;
+    height: 300px;
+    width: 310px;
+    border-radius: 50%;
 }
 
 section {
@@ -24,7 +31,27 @@ section {
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
-    height: 100vh;
+    height: 94vh;
+    width: 100%;
+    margin: 0;
+}
+
+.btnWrap {
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: flex-end;
+	align-content: center;
+}
+
+#link {
+    background-color: transparent;
+    background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+    height: 6vh;
     width: 100%;
     margin: 0;
 }
