--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,10 +35,6 @@
     margin-top: 2%;
 }
 
-#test {
-    height: 200px;
-}
-
 #photo {
     margin-top: 5%;
     height: 300px;
@@ -94,12 +90,12 @@ section {
 .button1 {
     font-size: 30px;
     width: 20%;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     text-decoration: none;
     text-align: center;
     background-color: white;
     color: black;
-    border: 2px solid #555555;
+    border: 4px solid #000000;
 }
 
 .button1:hover {
