--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,17 +62,6 @@ section {
     padding-top: .16%;
 }
 
-#link {
-    background-color: transparent;
-    background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	background-attachment: fixed;
-    height: 6vh;
-    width: 100%;
-    margin: 0;
-}
-
 #section1 {
     background-image: url("../pics/bc/bc.jpeg");
 }
@@ -89,13 +78,19 @@ section {
 
 .button1 {
     font-size: 30px;
-    width: 20%;
-    /* border-radius: 5px; */
+    padding-bottom: .5%;
+    width: 15%;
+    font-family: 'Playfair Display', serif;
+    font-weight: bolder;
+    border-radius: 3px;
     text-decoration: none;
     text-align: center;
-    background-color: white;
-    color: black;
-    border: 4px solid #000000;
+    background-color: whitesmoke;
+    color: #333333;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    border: 3px solid rgba(0, 0, 0, .6);
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
 }
 
 .button1:hover {
@@ -106,6 +101,63 @@ section {
 }
 
 #section2 {
+    background-image: url("../pics/bc/projects.jpg");
+}
+
+#drawing {
+    background-color: white;
+    height: 400px;
+    margin-top: 25%;
+    padding: 2%;
+    font-family: 'Rock Salt', cursive;
+    color: #333333;
+}
+
+#drawing li {
+    font-size: 25px;
+    padding: 2% 0;
+}
+
+#sketch {
+    margin-top: 12.5%;
+}
+
+#sketch img {
+    width: 100%;
+    height: 200px;
+
+}
+
+#sub-sketch img {
+    float: right;
+    width: 40%;
+    margin: 2% 0 0 5%;
+}
+
+.button2 {
+    font-size: 30px;
+    width: 20%;
+    padding-bottom: .4%;
+    border-radius: 3px;
+    text-decoration: none;
+    text-align: center;
+    background-color: white;
+    font-family: 'Rock Salt', cursive;
+    color: #333333;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    border: 3px solid rgba(0, 0, 0, .7);
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+}
+
+.button2:hover {
+    background-color: #555555;
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    text-decoration: none;
+}
+
+#section3 {
     background-image: url("../pics/bc/upkeep.png");
     background-color: black;
 }
@@ -123,6 +175,7 @@ section {
     float: right;
     font-family: 'Allerta Stencil', sans-serif;
     color: #333333;
+    text-shadow: 3px 3px 8px #555;
     font-weight: bolder;
     font-size: 60px;
     margin-top: 50%;
@@ -132,6 +185,7 @@ section {
     float: right;
     font-family: 'Allerta Stencil', sans-serif;
     color: #333333;
+    text-shadow: 3px 3px 8px #555;
     font-weight: bold;
     font-size: 40px;
     margin-top: 6%;
@@ -142,7 +196,30 @@ section {
     margin: 17% 0 7% 0;
 }
 
-#section3 {
+.button3 {
+    font-size: 30px;
+    width: 20%;
+    padding-bottom: .4%;
+    border-radius: 3px;
+    text-decoration: none;
+    text-align: center;
+    background-color: white;
+    font-family: 'Allerta Stencil', sans-serif;
+    color: #333333;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    border: 3px solid rgba(0, 0, 0, .7);
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+}
+
+.button3:hover {
+    background-color: #555555;
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    text-decoration: none;
+}
+
+#section4 {
     background-image: url("../pics/bc/purpletree.png");
 }
 
