--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ section {
 }
 
 #section2 {
-    background-image: url("../pics/bc/projects.jpg");
+    background-image: url("../pics/bc/draw1.jpg");
 }
 
 #drawing {
@@ -295,7 +295,7 @@ section {
 
 .button4 {
     font-family: 'Schoolbell', cursive;
-    color: #8080ff;
+    color: #a2a2ff;
     text-shadow: 2px 2px #ff66ff;
     font-weight: bold;
     font-size: 30px;
