--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,8 @@
 
 #photo {
     margin-top: 5%;
-    height: 310px;
-    width: 280px;
+    height: 300px;
+    width: 300px;
     border-radius: 50%;
 }
 
@@ -314,9 +314,70 @@ section {
     border: 3px solid rgba(0, 0, 0, .3);
 }
 
+
 /* PICTURE GALLERY */
 #section5 {
     background-image: url("../pics/bc/draw.jpg");
+}
+
+h2 {
+    color: #fff;
+    transition: 0.3s;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: sans-serif;
+}
+
+.projContainer {
+    display: inline-block;
+    text-align: center;
+    margin-top: 1.5%;
+    overflow: hidden;
+    position: relative;
+    vertical-align: top;
+    width: 330px;
+    height: 218px;
+    cursor: pointer;
+}
+  
+.projContainer img {
+    /* vertical-align: center; */
+    transition: 0.4s;
+}
+
+.projContainer:hover img {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+}
+  
+.projContainer:hover h2 {
+    padding-top: 10%;
+}
+
+.projInfoContainer {
+    position: absolute;
+    background: rgba(5,5,5,0.8);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    opacity: 0;
+    transition: 0.2s;
+}
+
+.projContainer:hover .projInfoContainer {
+    opacity: 1;
+}
+
+.projCat {
+    color: #5cd9fd;
+    font-weight: bold;
+}
+
+.projSpec {
+   color: #aaa;
+   font-family: sans-serif;
 }
 
 .gallery {
@@ -324,7 +385,7 @@ section {
     display: flex;
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
-    padding: 0 4px;
+    margin: 8% -60px;
 }
 
 /* Create four equal columns that sits next to each other */
@@ -333,7 +394,13 @@ section {
     flex: 25%;
     max-width: 25%;
     padding: 0 4px;
+    margin: 0 .8%;
 }
+
+
+
+
+
 
 .tile {
     position: relative; 
