--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+.popover {
+    max-width: 100%;
+}
+
 .navbar {
     opacity: 0;
     background: rgba(0, 0, 0, 0.85);
@@ -160,7 +164,8 @@ section {
 	flex-wrap: wrap;
 	justify-content: flex-end;
 	align-items: center;
-	align-content: flex-end;
+    align-content: flex-end;
+    margin-top: 12%;
 }
 
 #upkeep h1{
@@ -170,7 +175,7 @@ section {
     text-shadow: 3px 3px 8px #555;
     font-weight: bolder;
     font-size: 60px;
-    margin-top: 35%;
+    margin-top: 10px;
 }
 
 #upkeep h3 {
@@ -245,7 +250,8 @@ section {
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: center;
-	align-content: flex-start;
+    align-content: flex-start;
+    margin-top: 18%;
 }
 
 #tree img {
@@ -260,12 +266,12 @@ section {
     text-shadow: 2px 2px #ff66ff;
     font-weight: bolder;
     font-size: 60px;
-    margin-top: 20%;
+    margin-top: 10px;
     width: 100%;
 }
 
 #purple a {
-    width: 100%;
+    width: 55%;
 }
 
 #purple h3 {
