--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,32 @@ html, body {
     height: 100%;
 }
 
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 20px;
+    font-family: 'Playfair Display', serif;
+    font-weight: bold;
+    border: none;
+    outline: none;
+    background-color: #fd7c00;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    /* border: 3px solid rgba(0, 0, 0, .6); */
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+  }
+  
+  #myBtn:hover {
+    background-color: #43876e;
+  }
+
 .container-full {
     min-height: 100%;
     overflow:auto;
@@ -31,39 +57,29 @@ html, body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+#copy {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
+
+#copy:hover, #copy:active, #copy:visited, #copy:focus {
+    text-decoration: none;
+}
+
 .popover {
     max-width: 100%;
 }
 
 .navbar {
-    opacity: 0;
+    /* opacity: 1; */
     background: rgba(0, 0, 0, 0.85);
+    -webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
 }
-
-/*NAVBAR TEST*/
-/* * {box-sizing: border-box;max-width: 100%;font-family: 'Gruppo', cursive;}
-html,body {height: 100%;margin: 0;padding: 0;background:greenyellow}
-
-.menu-icon {width: 50px;height: 50px;position: fixed;top: 0;right: 0;margin: 10px 15px;transform:scale(0.8);padding: 0;cursor: pointer;z-index:20}
-.menu-bar {width: 50px;height: 5px;background: rgb(209, 17, 17);position: absolute;transition: all 0.3s;}
-.menu-bar1 {margin-top: 9px}
-.menu-bar2 {margin-top: 23px}
-.menu-bar3 {margin-top: 37px}
-.menu-icon.hover .menu-bar1 {-webkit-transform: rotate(45deg) scaleX(0.7);margin-top: 22px;}
-.menu-icon.hover .menu-bar2 {opacity: 0}
-.menu-icon.hover .menu-bar3 {-webkit-transform: rotate(-45deg) scaleX(0.7);margin-top: 22px;}
-
-.menu {width: 100%;height: 100%;display: -webkit-flex;display: flex;-webkit-flex-wrap: wrap;flex-wrap: wrap;}
-.menu-con {-webkit-flex-grow: 1;flex-basis: 0;flex-grow: 1;display: -webkit-flex;display: flex;-webkit-justify-content:space-around;position:relative;top:-100%;transition:all 0.5s}
-.menu-con p:before {content: ""; display: block;position:absolute;top:0;left:0;z-index:1;width:100%;height: 100%;opacity: 1;background: rgba(0,0,0,0);-webkit-transition: all 0.5s;transition: all 0.5s;}
-.menu-con:hover p:before {background: rgba(0,0,0,0.2)}
-.menu-con p {height:20px;-webkit-align-self:center;color:white;font-size:25px;z-index:2;cursor:pointer}
-@media screen and (max-width: 600px) {.menu-con {min-width:50%}}
-@media screen and (max-width: 350px) {.menu-con {min-width:100%}} */
-
-
-
-
 
 #logo {
     font-family: 'Playfair Display', serif;
@@ -104,15 +120,15 @@ html,body {height: 100%;margin: 0;padding: 0;background:greenyellow}
 	justify-content: center;
 	align-items: center;
     align-content: stretch;
-    margin-top: 2%;
+    margin-top: 9%;
 }
 
 #photo {
-    margin-top: 5%;
-    height: 50vh;
+    /* margin-top: 5%; */
+    height: 52vh;
     width: 50vh;
     border-radius: 50%;
-    animation-delay: 1s;
+    animation-delay: 1.5s;
     animation-duration: 2s;
 }
 
