--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,10 +17,13 @@ html, body {
     font-weight: bold;
     border: none;
     outline: none;
-    background-color: #fd7c00;
-    color: white;
+    background-color: white;
+    color: #fd7c00;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
     cursor: pointer;
-    padding: 15px;
+    padding: 10px 15px 15px;
     border-radius: 4px;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     /* border: 3px solid rgba(0, 0, 0, .6); */
@@ -28,9 +31,16 @@ html, body {
     background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
   }
   
-  #myBtn:hover {
-    background-color: #43876e;
-  }
+#myBtn:hover {
+    background-color: #fd7c00;
+    color: white;
+}
+
+#myBtn i {
+    text-shadow: 3px 3px 8px #555;
+    transition: text-shadow 0.2s ease-in-out;
+    font-size: xx-large;
+}
 
 .container-full {
     min-height: 100%;
