--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ html, body {
     padding-bottom:100px;
 }
 
-.footer {
+footer {
     position: relative;
     margin-top: -100px; /* negative value of footer height */
     height: 100px;
@@ -58,24 +58,37 @@ html, body {
     transition: background .2s ease-in;
 }
 
-.footer:hover {
+footer:hover {
     background-color: rgb(219, 219, 219);
 }
 
-.footer h1 {
+footer h1 {
     font-size: medium;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+.footer {
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+}
+
 #copy {
+    font-family: 'Playfair Display', serif;
+    font-weight: bolder;
+    font-size: xx-large;
+    /* margin-top: 1%; */
+}
+
+#copy:hover {
+    text-decoration: none;
     -webkit-animation-duration: 2s;
     animation-duration: 2s;
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
-}
-
-#copy:hover, #copy:active, #copy:visited, #copy:focus {
-    text-decoration: none;
 }
 
 .popover {
