--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ footer:hover {
 
 footer h1 {
     font-size: medium;
+    
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -80,10 +81,12 @@ footer h1 {
     font-family: 'Playfair Display', serif;
     font-weight: bolder;
     font-size: xx-large;
+    color: #333333;
     /* margin-top: 1%; */
 }
 
 #copy:hover {
+    color: #555555;
     text-decoration: none;
     -webkit-animation-duration: 2s;
     animation-duration: 2s;
@@ -129,6 +132,20 @@ footer h1 {
     -webkit-animation-iteration-count: infinite;
 }
 
+section {
+    background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+}
+
+#section1 {
+    background-image: url("../pics/bc/bc.jpeg");
+}
+
 #header h1 {
     color: white;
     font-family: 'Playfair Display', serif;
@@ -154,20 +171,6 @@ footer h1 {
     border-radius: 50%;
     animation-delay: 1.5s;
     animation-duration: 2s;
-}
-
-section {
-    background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	background-attachment: fixed;
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-}
-
-#section1 {
-    background-image: url("../pics/bc/bc.jpeg");
 }
 
 .next {
@@ -209,34 +212,58 @@ section {
 }
 
 #drawing {
-    background-color: white;
-    height: 400px;
-    margin-top: 25%;
-    padding: 2%;
-    font-family: 'Rock Salt', cursive;
-    color: #333333;
+    margin-left: -10%;
+}
+
+#drawing h1 {
+    margin: 15% 5% 10% 0;
+    padding: 0 1%;
+    font-size: 550%;
+    font-family: 'Fredericka the Great', cursive;
+    color: white;
+    text-shadow: 8px 3px 8px rgba(0,0,0,0.3);
+}
+
+#drawing p {
+    margin: 1% 5% 10% 0;
+    padding: 0 1%;
+    font-size: 350%;
+    font-family: 'Fredericka the Great', cursive;
+    color: white;
+    text-shadow: 8px 3px 8px rgba(0,0,0,0.3);
 }
 
 #drawing li {
     font-size: 25px;
+    font-family: 'Fredericka the Great', cursive;
+    color: white;
+    text-shadow: 8px 3px 8px rgba(0,0,0,0.3);
     padding: 2% 0;
+
 }
 
-#sketch {
-    margin-top: 17.5%;
+.sketch {
+    margin: 15% -12% 8% 5.5%;
 }
 
-#sketch img {
+.sketch img {
     width: 100%;
-    height: 250px;
-
 }
 
-#sub-sketch img {
-    float: right;
-    width: 40%;
-    height: 150px;
-    margin: 1% 0 0 10%;
+.sub-sketch {
+    margin: 5% -6% 0 5%;
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+	align-content: stretch;
+}
+
+.story {
+    margin: 2%;
+    width: 50%;
+    height: 200px;
 }
 
 .button2 {
