--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,20 @@
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
+.neon {
+    background-image: url("../pics/bc/neon.gif");
+    background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
 }
+
+/* html, body {
+    height: 100%;
+} */
 
 #myBtn {
     display: none;
@@ -12,7 +23,7 @@ html, body {
     bottom: 20px;
     right: 30px;
     z-index: 99;
-    font-size: 20px;
+    /* font-size: 20px; */
     font-family: 'Playfair Display', serif;
     font-weight: bold;
     border: none;
@@ -64,7 +75,6 @@ footer:hover {
 
 footer h1 {
     font-size: medium;
-    
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -150,7 +160,7 @@ section {
     color: white;
     font-family: 'Playfair Display', serif;
     text-align: center;
-    font-size: 8vh;
+    font-size: 300%;
     font-weight: bolder;
 }
 
@@ -161,16 +171,17 @@ section {
 	justify-content: flex-start;
 	align-items: center;
 	align-content: stretch;
-    margin: 9% 0 5% -10%;
+    margin: 9% 0 4% 0;
 }
 
 #photo {
     /* margin-top: 5%; */
-    height: 48vh;
-    width: 45vh;
+    height: 280px;
+    /* width: 25%; */
     border-radius: 50%;
     animation-delay: 1.5s;
     animation-duration: 2s;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .next {
@@ -211,14 +222,10 @@ section {
     background-image: url("../pics/bc/draw1.jpg");
 }
 
-#drawing {
-    margin-left: -10%;
-}
-
 #drawing h1 {
-    margin: 15% 5% 10% 0;
+    margin: 8% 5% 5% 0;
     padding: 0 1%;
-    font-size: 550%;
+    font-size: 9vh;
     font-family: 'Fredericka the Great', cursive;
     color: white;
     text-shadow: 8px 3px 8px rgba(0,0,0,0.3);
@@ -227,31 +234,34 @@ section {
 #drawing p {
     margin: 1% 5% 10% 0;
     padding: 0 1%;
-    font-size: 350%;
+    font-size: 6vh;
     font-family: 'Fredericka the Great', cursive;
     color: white;
     text-shadow: 8px 3px 8px rgba(0,0,0,0.3);
 }
 
 #drawing li {
-    font-size: 25px;
+    float: left;
+    font-size: 5vh;
     font-family: 'Fredericka the Great', cursive;
     color: white;
     text-shadow: 8px 3px 8px rgba(0,0,0,0.3);
-    padding: 2% 0;
+    padding: 2% 25% 0 1%;
 
 }
 
 .sketch {
-    margin: 15% -12% 8% 5.5%;
+    margin: 8% 0 1% 5.5%;
 }
 
 .sketch img {
-    width: 100%;
+    width: 100vh;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .sub-sketch {
-    margin: 5% -6% 0 5%;
+    width: 100%;
+    /* margin: 5% 0 0 5%; */
     display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
@@ -260,10 +270,18 @@ section {
 	align-content: stretch;
 }
 
-.story {
-    margin: 2%;
-    width: 50%;
-    height: 200px;
+.sub-sketch img {
+    width: 50vh;
+    /* margin: 2%; */
+    height: 30vh;
+}
+
+#story {
+    margin: 4% 2% 0 -4%;
+}
+
+#sketch {
+    margin: 4% 0 0 2%;
 }
 
 .button2 {
