--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,15 +153,16 @@ section {
 }
 
 #section1 {
-    background-image: url("../pics/bc/bc.jpeg");
+    background-image: url("../pics/bc/cloud.jpg");
 }
 
 #header h1 {
-    color: white;
+    color: #fe7000;
     font-family: 'Playfair Display', serif;
     text-align: center;
     font-size: 300%;
     font-weight: bolder;
+    text-shadow: -10px 8px 12px rgba(0,0,0,0.4);
 }
 
 #picWrap {
@@ -176,10 +177,10 @@ section {
 
 #photo {
     /* margin-top: 5%; */
-    height: 280px;
+    height: 290px;
     /* width: 25%; */
-    border-radius: 50%;
-    animation-delay: 1.5s;
+    border-radius: 2%;
+    animation-delay: .5s;
     animation-duration: 2s;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
